--- a/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
@@ -1,31 +1,33 @@
 \section{A}
-\TermineGlossario{Accesso} 
+\TermineGlossario{accesso} 
 \DefinizioneGlossario{Per accesso si intende l'azione fisica di ingresso-uscita nei luoghi dell'organizzazione che viene effettuata dall'utente.}
 
-\TermineGlossario{Accuratezza}
+\TermineGlossario{accuratezza}
 \DefinizioneGlossario{Capacità di un prodotto software di fornire i risultati o gli effetti attesi con il livello di precisione richiesta
 dall'utente.}
 
-\TermineGlossario{Adeguatezza}
+\TermineGlossario{adeguatezza}
 \DefinizioneGlossario{Capacità di un prodotto software di fornire un appropriato insieme di funzioni che permettano all'utente di svolgere determinati task e di raggiungere gli obiettivi prefissati.}
 
-\TermineGlossario{AGILE}
+\TermineGlossario{agile}
 \DefinizioneGlossario{Insieme di pratiche per lo sviluppo software che avvicinano alla scoperta dei requisiti e allo sviluppo di soluzioni attraverso lo sforzo collaborativo dei team auto-organizzati e interfunzionali e dei loro clienti / utenti finali. Promuove la pianificazione adattativa, lo sviluppo evolutivo, la consegna precoce e il miglioramento continuo e incoraggia risposte flessibili al cambiamento.}
 
 \TermineGlossario{Amazon Web Services (AWS)}
 \DefinizioneGlossario{Azienda statunitense di proprietà Amazon, che fornisce servizi di cloud computing on demand.}
 
-\TermineGlossario{Amministratore}
+\TermineGlossario{amministratore}
 \DefinizioneGlossario{Ha l'incarico di controllare l'efficienza dell'ambiente di lavoro e di gestire tutti i documenti relativi al progetto. Si occupa, inoltre, della configurazione e versionamento del prodotto.}
 
-\TermineGlossario{Analista}
+\TermineGlossario{analista}
 \DefinizioneGlossario{Ha l'incarico di seguire il progetto dall'inizio fino alla fine e redige i documenti \SdF{} e \AdR{}. Il suo lavoro si basa nel conoscere a fondo il problema e definire i requisiti espliciti ed impliciti.}
 
-\TermineGlossario{Analizzabilità}
+\TermineGlossario{analizzabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di facilitare la diagnosi sul software, individuando la causa di errori o malfunzionamenti qualora presenti.}
 
 \TermineGlossario{Android}
 \DefinizioneGlossario{Android è un sistema operativo per dispositivi mobili sviluppato da Google, progettato principalmente per sistemi embedded quali smartphone e tablet, con interfacce utente specializzate per televisori, automobili, orologi da polso, occhiali, e altri.È basato sul kernel Linux.}
+\TermineGlossario{Angular}
+\DefinizioneGlossario{è un framework open source per lo sviluppo di applicazioni web con licenza MIT basato su codice Typescript.}
 
 
 \TermineGlossario{Apache tomcat}
@@ -40,19 +42,19 @@ dall'utente.}
 \TermineGlossario{API gateway}
 \DefinizioneGlossario{Strumento che permette d’intermediare i servizi ( o microservizi) ed esporli in maniera strutturata verso l’esterno.}
 
-\TermineGlossario{Applicazione web}
+\TermineGlossario{applicazione web}
 \DefinizioneGlossario{Una applicazione distribuita web-based cioè fruibile via web per mezzo di un network, come Internet, che offre determinati servizi all'utente che la utilizza. Le applicazioni web a differenza delle altre applicazioni non necessitano di venire installate.}
 
 \TermineGlossario{AppSync}
 
 \DefinizioneGlossario{AWS AppSync è un servizio completamente gestito che facilita lo sviluppo di API GraphQL gestendo le attività impegnative derivanti dalla connessione sicura a origini dati come \glo{AWS DynamoDB}, \glo{Lambda} e altro}
 
-\TermineGlossario{Asincrona}
+\TermineGlossario{asincrona}
 \DefinizioneGlossario{Sono generiche attività che proseguono indisturbate ed il chiamante non deve attendere la fine dell'attività del codice richiamato.}
 
-\TermineGlossario{Attrattività}
+\TermineGlossario{attrattività}
 \DefinizioneGlossario{Capacità del prodotto software di risultare piacevole per l'utente. La qualità è relativa alla progettazione dell'aspetto grafico delle interfacce.}
 
-\TermineGlossario{Autenticazione}
+\TermineGlossario{autenticazione}
 \DefinizioneGlossario{È l’azione che conferma la verità di un attributo di un singolo dato o di un’informazione sostenuta vera da un’entità. In informatica è un processo nella quale un computer, sistema informatico o un utente verifica la corretta identità di un altro software, computer o utente che vuole comunicare attraverso una connessione, autorizzandolo  ad utilizzare eventuali servizi associati.}
 \clearpage
