--- a/DocumentiEsterni/Glossario/src/Alfabeto/C.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/C.tex
@@ -1,50 +1,53 @@
 \section{C}
-\TermineGlossario{Camel Case}
+\TermineGlossario{camel case}
 \DefinizioneGlossario{Formato di scrittura di identificatori (tipicamente di nomi di file o di variabili) in cui le parole che li compongono sono separate dalle loro lettere maiuscole iniziali.}
 
 \TermineGlossario{Cascading Style Sheets (CSS3)}
 \DefinizioneGlossario{È un linguaggio usato per definire la formattazione di documenti HTML, XHTML e XML ad esempio i siti web e relative pagine web; permette una programmazione più chiara e facile da utilizzare, sia per gli autori delle pagine stesse sia per gli utenti, garantendo anche il riutilizzo di codice e facilita la manutenzione. Le specifiche CSS3 sono costituite da sezioni separate dette "moduli" e hanno differenti stati di avanzamento e stabilità.}
 
-\TermineGlossario{Ciclo di Deming}
+\TermineGlossario{ciclo di Deming}
 \DefinizioneGlossario{Modello per il miglioramento continuo della qualità in un’ottica a lungo raggio, anche detto PDCA (Plan, Do, Check, Act).}
 
-\TermineGlossario{Clean architecture}
+\TermineGlossario{clean architecture}
 \DefinizioneGlossario{È una filosofia di progettazione software che separa gli elementi di un progetto in livelli ad anello.}
 
 \TermineGlossario{CLI}
 \DefinizioneGlossario{Acronimo di Command Line Interface. Si riferisce a un'interfaccia utente che permette di interagire con il sistema operativo e con gli altri programmi mediante la digitazione di comandi testuali. Alcuni esempi di CLI sono cmd o Command Prompt su SO Windows, bash su SO basati su Linux.}
 
 
-\TermineGlossario{Cloud}
+\TermineGlossario{cloud}
 \DefinizioneGlossario{È uno spazio di archiviazione dove può essere accessibile in qualsiasi momento ed in ogni luogo utilizzando semplicemente una qualunque connessione ad Internet.}
 
 \TermineGlossario{Cloudwatch}
-\DefinizioneGlossario{Fornisce dati e analisi concrete per monitorare le applicazioni, rispondere ai cambiamenti di prestazioni a livello di sistema, ottimizzare l'utilizzo delle risorse e ottenere una visualizzazione unificata dello stato di integrità operativa.}
+\DefinizioneGlossario{Servizio che fornisce dati e analisi concrete per monitorare le applicazioni, rispondere ai cambiamenti di prestazioni a livello di sistema, ottimizzare l'utilizzo delle risorse e ottenere una visualizzazione unificata dello stato di integrità operativa.}
 
-\TermineGlossario{Cluster}
+\TermineGlossario{cluster}
 \DefinizioneGlossario{È un insieme di computer connessi tra loro tramite una rete telematica con lo scopo di distribuire un'elaborazione molto complessa tra i vari computer, aumentando la potenza di calcolo del sistema e/o garantendo una maggiore disponibilità di servizio.}
 
-\TermineGlossario{Code generation}
+\TermineGlossario{code generation}
 \DefinizioneGlossario{Meccanismo dove il compilatore prende in input il codice sorgente e lo converte in codice macchina.}
 
-\TermineGlossario{Code smell} 
+\TermineGlossario{code smell} 
 \DefinizioneGlossario{Nell'ingegneria del software questa espressione viene usata per indicare una serie di caratteristiche che il codice sorgente può avere e che sono generalmente riconosciute 
 come probabili indicazioni di un difetto di programmazione; in altre parole sono debolezze di progettazione che compromettono la qualità del software.}
 
-\TermineGlossario{Commit}
+\TermineGlossario{commit}
 \DefinizioneGlossario{Una serie di modifiche che sono stati esplicitamente convalidate.}
 
-\TermineGlossario{Computation as a service (CaaS)}
+\TermineGlossario{computation as a service (CaaS)}
 \DefinizioneGlossario{Le risorse di elaborazione vengono fornite su richiesta tramite risorse virtuali o fisiche come servizio.}
 
-\TermineGlossario{Continuous integration} 
+\TermineGlossario{container}
+\DefinizioneGlossario{è la virtualizzazione a livello di sistema operativo in cui il kernel consente l'esistenza di più istanze di spazio utente isolate. Tali istanze, chiamate container}
+
+\TermineGlossario{continuous integration} 
 \DefinizioneGlossario{In ingegneria del software è una pratica che si applica in contesti in cui lo sviluppo del software avviene attraverso un sistema di controllo versione. 
 È dimostrabile come incremento, andando verso il risultato voluto ogni passo che si esegue ha un valore aggiuntivo.}
 
-\TermineGlossario{Criptovaluta}
+\TermineGlossario{criptovaluta}
 \DefinizioneGlossario{È una rappresentazione digitale di valore basata sulla crittografia.}
 
-\TermineGlossario{Csv}
+\TermineGlossario{CSV}
 \DefinizioneGlossario{Formato di file basato su file di testo utilizzato per l'importazione ed esportazione (ad esempio da fogli elettronici o database) di una tabella di dati.}
 
 \clearpage
