--- a/DocumentiEsterni/Glossario/src/Alfabeto/E.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/E.tex
@@ -1,13 +1,17 @@
 \section{E}
-\TermineGlossario{Economicità}
+\TermineGlossario{economicità}
 \DefinizioneGlossario{Indica la capacità di un sistema di essere efficace ed efficiente.}
 
-\TermineGlossario{Efficacia}
+\TermineGlossario{efficacia}
 \DefinizioneGlossario{Capacità di produrre l'effetto e i risultati voluti.}
 
-\TermineGlossario{Efficienza}
+\TermineGlossario{efficienza}
 \DefinizioneGlossario{Capacità costante di rendimento e rispondenza per i propri fini minimizzando le risorse.}
 
-\TermineGlossario{End to end (test)}
+\TermineGlossario{end to end (test)}
 \DefinizioneGlossario{Rappresenta una metodologia utilizzata per verificare se il flusso di un'applicazione si sta comportando come progettato dall'inizio alla fine senza che vengano rilevati degli errori che andrebbero a inficiare sulla qualità dell’applicazione stessa.}
+
+\TermineGlossario{epic}
+\DefinizioneGlossario{ticket di Jira che indica un deliverable o un task di importanza rilevante.}
+
 \clearpage
