--- a/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
@@ -1,22 +1,26 @@
 \section{F}
-\TermineGlossario{Fase}
+\TermineGlossario{fase}
 \DefinizioneGlossario{Tempo che intercorre fra due milestone nel ciclo di vita del software, si intende una classica fase di sviluppo.}
 
 \TermineGlossario{FIFO}
 \DefinizioneGlossario{Acronimo di di First In First Out. Il metodo FIFO rappresenta la modalità di immagazzinamento di oggetti fisici in cui il primo oggetto introdotto è il primo ad uscire.}
 
-\TermineGlossario{Fish-level}
+\TermineGlossario{fish-level}
 \DefinizioneGlossario{Categoria di operazioni con interazione atomica tra attore e sistema.}
+\TermineGlossario{Flatter}
+\DefinizioneGlossario{Flutter è un kit di sviluppo software per interfaccia utente open source creato da Google. Viene utilizzato per sviluppare applicazioni per Android, iOS, Linux, Mac, Windows, Google Fuchsia e per il Web da una singola base di codice. }
 
-\TermineGlossario{Framework}
+\TermineGlossario{framework}
 \DefinizioneGlossario{Insieme integrato di componenti software prefabbricate che offrono uno schema di soluzione preconfezionato per un determinato tipo di problema.}
 
-\TermineGlossario{Frontend}
+\TermineGlossario{frontend}
 \DefinizioneGlossario{Insieme delle applicazioni e dei programmi informatici con cui l'utente interagisce direttamente (contrapposto a backend ).}
 
 \TermineGlossario{Function as a Service (FaaS)}
 \DefinizioneGlossario{È una categoria di servizi di cloud computing che fornisce una piattaforma che consente ai clienti di sviluppare, eseguire e gestire le funzionalità delle applicazioni senza la complessità di creare e mantenere l'infrastruttura tipicamente associata allo sviluppo e al lancio di un'applicazione.}
 
-\TermineGlossario{Funzionale}
+\TermineGlossario{funzionale}
 \DefinizioneGlossario{In relazione a un requisito esprime le funzionalità che il sistema deve offrire e il suo comportamento a fronte di particolari input.}
 \clearpage
+
+
