--- a/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
@@ -3,7 +3,7 @@
 \TermineGlossario{Gamelift}
 \DefinizioneGlossario{GameLift è una soluzione di hosting di server di giochi che distribuisce offerto da Amazon, gestisce e dimensiona i server cloud per giochi multigiocatore basato su sessioni.}
 
-\TermineGlossario{Geolocalizzazione}
+\TermineGlossario{geolocalizzazione}
 \DefinizioneGlossario{Processo che permette l'individuazione geografica del luogo in cui si trova un determinato oggetto attraverso l'uso di apparecchiature in grado di trasmettere segnali a un satellite.}
 
 \TermineGlossario{Git}
