--- a/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
@@ -1,38 +1,35 @@
 \section{M}
-\TermineGlossario{Machine Learning}
+\TermineGlossario{machine learning}
 \DefinizioneGlossario{Apprendimento automatico di differenti meccanismi che permettono a una macchina intelligente di migliorare le proprie capacità e prestazioni nel tempo. La macchina, quindi, sarà in grado di imparare a svolgere determinati compiti migliorando, tramite l’esperienza, le proprie capacità, le proprie risposte e funzioni.}
 
 \TermineGlossario{Markdown}
 \DefinizioneGlossario{Linguaggio di markup molto semplice, per realizzare con semplicità contenuti testuali. Viene utilizzato dal gruppo per realizzare i manuali utente e manutentore, ma viene utilizzato implicitamente anche su GitHub quando si crea un issue, in quanto linguaggio di default.}
 
-\TermineGlossario{Maturità}
+\TermineGlossario{maturità}
 \DefinizioneGlossario{Capacità di un prodotto software di evitare che si verifichino errori o che siano prodotti risultati non corretti in fase di esecuzione.}
 
-\TermineGlossario{Merge}
+\TermineGlossario{merge}
 \DefinizioneGlossario{In italiano "fusione", è un comando di Git che permette di unire due rami (branch), includendo le modifiche eseguite a carico di un ramo in un altro.}
 
-\TermineGlossario{Milestone}
+\TermineGlossario{milestone}
 \DefinizioneGlossario{Momento nel ciclo di vita del software in cui è fissato il raggiungimento di un obiettivo specifico, a cui corrisponde una o più baseline.}
 
-\TermineGlossario{Modalità di tracciamento autenticato}
+\TermineGlossario{modalità di tracciamento autenticato}
 \DefinizioneGlossario{È una specifica progettuale che da la possibilità all’utente che usufruisce dell’applicazione di essere tracciato all'interno dei luoghi dell'organizzazione. Questa modalità riconosce l'identità fisica dell'utente tracciato (nome, cognome e altri dati personali reali).}
 
-\TermineGlossario{Model-View-Controller}
-\DefinizioneGlossario{ pattern architetturale molto diffuso nello sviluppo di sistemi software, in particolare nell'ambito della programmazione orientata agli oggetti e in applicazioni web, in grado di separare la logica di presentazione dei dati dalla logica di business.[1] Questo pattern si posiziona nel livello logico o di business e di presentazione in una architettura multi-tier.}
 
-\TermineGlossario{Modificabilità}
+\TermineGlossario{modificabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di consentire lo sviluppo di modifiche al software originale. L'implementazione include modifiche al codice, alla progettazione e alla documentazione.}
 
-\TermineGlossario{Movimento}
+\TermineGlossario{movimento}
 \DefinizioneGlossario{Per movimento si intende una azione fisica di ingresso o di uscita nei luoghi dell'organizzazione che viene effettuata dall'utente.}
 
-\TermineGlossario{Multiplayer}
+\TermineGlossario{multiplayer}
 \DefinizioneGlossario{nell'ambito dei videogiochi è la modalità di utilizzo in cui più persone partecipano al gioco nello stesso tempo.La partecipazione può essere simultanea, con tutti i giocatori in azione contemporaneamente, o invece alternata.}
 
 \TermineGlossario{MySQL}
 \DefinizioneGlossario{È un database relazionale open source composto da un client a riga di comando e un server. Supporta linguaggi come Java, PHP, Python, ecc.}
-
 \TermineGlossario{MVC}
-\DefinizioneGlossario{Vedere Model-View-Controller.}
+\DefinizioneGlossario{ pattern architetturale molto diffuso nello sviluppo di sistemi software, in particolare nell'ambito della programmazione orientata agli oggetti e in applicazioni web, in grado di separare la logica di presentazione dei dati dalla logica di business.[1] Questo pattern si posiziona nel livello logico o di business e di presentazione in una architettura multi-tier.}
 
 \clearpage
