--- a/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
@@ -22,6 +22,6 @@ Consiste in un client da linea di comando, chiamato anch'esso npm e un database 
 \TermineGlossario{NPC (nonplayable character)} 
 \DefinizioneGlossario{in un videogame,è un qualsiasi personaggio che non è sotto il controllo diretto di un giocatore}
 
-\TermineGlossario{Numero progressivo} 
+\TermineGlossario{numero progressivo} 
 \DefinizioneGlossario{È un numero identificativo che viene assegnato in maniera univoca per distinguere un esemplare di una serie.}
 \clearpage
