--- a/DocumentiEsterni/Glossario/src/Alfabeto/O.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/O.tex
@@ -7,16 +7,16 @@ Le specifiche API possono essere scritte in YAML o JSON.}
 \TermineGlossario{Openshift}
 \DefinizioneGlossario{Costruito a partire da Kubernetes ma sfrutta diversi altri progetti e tecnologie open source (come Source 2 Image, la tecnologia che permette di passare dal codice sorgente di un'applicazione all'applicazione containerizzata, o Jenkins, un popolarissimo server di CI/CD).}
 
-\TermineGlossario{Operabilità}
+\TermineGlossario{operabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di offrire delle funzioni coerenti con le aspettative dell’utente.}
 
 \TermineGlossario{Orange (Canvas)}
 \DefinizioneGlossario{È un toolkit di visualizzazione dei dati open source, machine learning e data mining. È dotato di un front-end di programmazione visiva per l'analisi dei dati esplorativi e la visualizzazione interattiva dei dati. Orange è costituito da un'interfaccia canvas su cui l'utente posiziona i widget e crea un flusso di lavoro di analisi dei dati.}
 
-\TermineGlossario{Ordinamento per data (crescente)}
+\TermineGlossario{ordinamento per data (crescente)}
 \DefinizioneGlossario{Considerando una data maggiore di un'altra più recente, si intende che, dato un insieme di date (possibilmente con elementi ripetuti), una data meno recente precede una più recente.}
 
-\TermineGlossario{Ordinamento per data (decrescente)}
+\TermineGlossario{ordinamento per data (decrescente)}
 \DefinizioneGlossario{Considerando una data maggiore di un'altra più recente si intende che, dato un insieme di date (possibilmente con elementi ripetuti), una data più recente precede una meno recente.}
 
 \clearpage
