--- a/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
@@ -2,34 +2,34 @@
 \TermineGlossario{PDCA)}
 \DefinizioneGlossario{Vedere ciclo di Deming}
 
-\TermineGlossario{Platform as a Service (PAAS)}
+\TermineGlossario{Platform as a Service (PaaS)}
 \DefinizioneGlossario{È un un servizio cloud tramite il quale un provider mette a disposizione un ambiente di sviluppo e degli appositi strumenti per ideare nuove applicazioni.}
 
-\TermineGlossario{Player-character}
+\TermineGlossario{player-character}
 \DefinizioneGlossario{Il personaggio/cosa controllato e interpretato dal giocatore umano in un videogioco.}
 
-\TermineGlossario{Plugin}
+\TermineGlossario{plugin}
 \DefinizioneGlossario{È un programma non autonomo che interagisce con un altro programma per ampliarne o estenderne le funzionalità originarie.}
 
-\TermineGlossario{Prestazionale}
+\TermineGlossario{prestazionale}
 \DefinizioneGlossario{In relazione a un requisito esprime dei vincoli di economicità che il prodotto deve rispettare.}
 
-\TermineGlossario{Privilegi}
+\TermineGlossario{privilegi}
 \DefinizioneGlossario{I privilegi sono fondamentalmente i vari tipi di amministratore. Il privilegio più basso è visualizzatore, poi gestore e infine proprietario.}
 
-\TermineGlossario{Processo} 
+\TermineGlossario{processo} 
 \DefinizioneGlossario{È l'insieme delle attività correlate e coese che trasformano i bisogni in prodotti (il risultato di un processo si chiama prodotto). Opera secondo regole consumando risorse.}
 
 \TermineGlossario{Product Baseline} 
 \DefinizioneGlossario{Documentazione tecnica che descrive tutte le caratteristiche fisiche e funzionali implementate all'interno del prodotto. Essa deve includere i diagrammi di classe, di sequenza e la contestualizzazione dei design pattern adottati.}
 
-\TermineGlossario{Progettista} 
+\TermineGlossario{progettista} 
 \DefinizioneGlossario{Ha l'incarico di definire l'architettura alla base del sistema del prodotto software. Segue lo sviluppo e non la manutenzione del prodotto.}
 
-\TermineGlossario{Programmatore} 
+\TermineGlossario{programmatore} 
 \DefinizioneGlossario{Partecipa sia alla realizzazione che alla manutenzione del prodotto. È competente nella codifica e nella realizzazione di componenti necessarie all'esecuzione delle prove di verifica e validazione. Il codice prodotto dal programma deve essere mantenibile nel tempo.}
 
-\TermineGlossario{Programmazione concorrente e distribuita}
+\TermineGlossario{programmazione concorrente e distribuita}
 \DefinizioneGlossario{La concorrenza è una caratteristica dei sistemi di elaborazione nei quali può verificarsi che un insieme di processi o sotto-processi (thread) computazionali sia in esecuzione nello stesso istante. La distribuzione indica genericamente una tipologia di sistema informatico costituito da un insieme di processi interconnessi tra loro in cui le comunicazioni avvengono solo esclusivamente tramite lo scambio di opportuni messaggi.}
 
 \TermineGlossario{Proof of Concept (PoC)}
