--- a/DocumentiEsterni/Glossario/src/Alfabeto/Q.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/Q.tex
@@ -2,13 +2,13 @@
 \TermineGlossario{Qt}
 \DefinizioneGlossario{È una libreria multipiattaforma per lo sviluppo di programmi in C++ con interfaccia grafica tramite l'uso di widget.}
 
-\TermineGlossario{Quantificabile}
+\TermineGlossario{quantificabile}
 \DefinizioneGlossario{Il lavoro del gruppo può essere valutato secondo metriche predefinite e univoche, in modo da trarre importanti indizi sul corretto svolgimento o meno del lavoro.}
 
-\TermineGlossario{Qualitativo}
+\TermineGlossario{qualitativo}
 \DefinizioneGlossario{In relazione a un requisito esprime un vincolo sul prodotto misurando la sua qualità in maniera replicabile.}
 
-\TermineGlossario{Query}
+\TermineGlossario{query}
 \DefinizioneGlossario{Interrogazione di un database per estrarre o aggiornare i dati che soddisfano un certo criterio di ricerca.}
 
 \clearpage 
