--- a/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
@@ -10,31 +10,31 @@
 \DefinizioneGlossario{È un archivio di strutture di dati in memoria open source, utilizzato come database, cache e broker di messaggi. Supporta strutture di dati come stringhe, hash, elenchi, set, 
 set ordinati con query di intervallo, bitmap, hyperloglogs, indici geospaziali con query di raggio e flussi.}
 
-\TermineGlossario{Regressione lineare (RL)}
+\TermineGlossario{regressione lineare (RL)}
 \DefinizioneGlossario{La regressione formalizza e risolve il problema di una relazione funzionale tra variabili misurate sulla base di dati campionari estratti da un'ipotetica popolazione infinita.}
 
-\TermineGlossario{Report}
+\TermineGlossario{report}
 \DefinizioneGlossario{è un documento che presenta le informazioni in un formato organizzato per un pubblico e uno scopo specifici.}
 
-\TermineGlossario{Repository}
+\TermineGlossario{repository}
 \DefinizioneGlossario{È un archivio dove vengono raccolti dati ed informazioni in formato digitale sulla base di metadati che ne permettono la rapida individuazione.}
 
 \TermineGlossario{Representational State Transfer (REST)}
 \DefinizioneGlossario{È uno stile architetturale software per i sistemi distribuiti e rappresenta un sistema di trasmissione di dati su protocollo HTTP senza ulteriori livelli; non prevede il concetto di sessione (stateless).}
 
-\TermineGlossario{Requisiti}
+\TermineGlossario{requisiti}
 \DefinizioneGlossario{È l'insieme di tutte le funzionalità che il prodotto software deve offrire e che sono definite nelle specifiche del proponente. I requisiti si possono dividere in tre categorie: obbligatori, desiderabili ed opzionali.}
 
-\TermineGlossario{Responsabile}
+\TermineGlossario{responsabile}
 \DefinizioneGlossario{Ha l'incarico di pianificare, motivare, coordinare e controllare i membri del team. Il suo compito prevede inoltre l'approvazione dei documenti e l'emanazione di piani e scadenze. Ha l'onere di rappresentante del team presso l'azienda proponente.}
 
-\TermineGlossario{Rete neurale (artificiale)}
+\TermineGlossario{rete neurale (artificiale)}
 \DefinizioneGlossario{Nel campo del machine learning, una rete neurale artificiale è un modello computazionale composto di "neuroni" artificiali, ispirato vagamente dalla semplificazione di una rete neurale biologica.}
 
 \TermineGlossario{RFID (Radio-frequency identification)}
 \DefinizioneGlossario{si intende una tecnologia per l'identificazione e/o memorizzazione automatica di informazioni inerenti a oggetti, animali o persone , e sulla capacità di queste di rispondere all'interrogazione a distanza da parte di appositi apparati fissi o portatili, chiamati reader.Negli ultimi anni la tecnologia che ha preso più piede in questo ambito è la tecnologia NFC.}
 
-\TermineGlossario{Realtime system}
+\TermineGlossario{realtime system}
 \DefinizioneGlossario{termine informatico per sistemi hardware e software soggetti a un "vincolo in tempo reale", ad esempio dall'evento alla risposta del sistema.I programmi in tempo reale devono garantire la risposta entro limiti di tempo specificati(deadlines)}
 
 \clearpage
