--- a/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
@@ -1,24 +1,24 @@
 \section{S}
-\TermineGlossario{Scalabilità orizzontale}
+\TermineGlossario{scalabilità orizzontale}
 \DefinizioneGlossario{È l'abilità di aumentare la capacità collegando più entità hardware o software in modo che funzionino come una singola unità logica. Quando i server sono raggruppati , il server originale viene ridimensionato orizzontalmente. Se un cluster (insieme di computer) richiede più risorse per migliorare le prestazioni e fornire alta disponibilità, un amministratore può scalare aggiungendo più server al cluster.}
 
-\TermineGlossario{Scrum}
+\TermineGlossario{scrum}
 \DefinizioneGlossario{è un framework agile per la gestione del ciclo di sviluppo del software, iterativo ed incrementale, concepito per gestire progetti e prodotti software o applicazioni di sviluppo}
 
-\TermineGlossario{Serverless}
+\TermineGlossario{serverless}
 \DefinizioneGlossario{È un network la cui gestione non viene incentrata su dei server, ma viene dislocata fra i vari utenti che utilizzano il network stesso, quindi il lavoro di gestione del network viene eseguito dagli stessi utilizzatori.}
 
-\TermineGlossario{Sincronizzazione}
+\TermineGlossario{sincronizzazione}
 \DefinizioneGlossario{si riferisce a uno dei due concetti distinti ma correlati: sincronizzazione dei processie sincronizzazione dei dati. La sincronizzazione dei processi si riferisce all'idea che più processi devono unirsi o stretta di mano in un determinato punto, al fine di raggiungere un accordo o impegnarsi in una determinata sequenza di azione. La sincronizzazione dei dati si riferisce all'idea di mantenere più copie di un set di dati in coerenza tra loro o di mantenere l'integrità dei dati. Le primitive di sincronizzazione dei processi vengono comunemente utilizzate per implementare la sincronizzazione dei dati.}
 
-\TermineGlossario{Sistematico}
+\TermineGlossario{sistematico}
 \DefinizioneGlossario{In riferimento al gruppo \Gruppo{} significa che quest'ultimo lavorerà seguendo criteri costanti e rigorosi.}
 
 \TermineGlossario{Slack}
 \DefinizioneGlossario{Slack è una piattaforma di messaggistica per team che integra insieme diversi canali di comunicazione in un unico servizio. L’obiettivo è cercare di migliorare l’esperienza lavorativa aumentando l’interazione tra differenti servizi consolidando e dando un senso al sempre crescente flusso di dati generato dal lavoro in team.}
 
-\TermineGlossario{Smart Contract Ethereum}
-\DefinizioneGlossario{È il codice che viene eseguito sul Ethereum Virtual Machine (EVM). Esso può accettare ed archiviare Ethereum, dati o la combinazione di entrambi distribuendoli ad altri account o persino ad altri smart contract.}
+\TermineGlossario{smart contract}
+\DefinizioneGlossario{È il codice che viene eseguito su una blockchain. Esso può accettare ed archiviare criptovaluta, dati o la combinazione di entrambi distribuendoli ad altri account o persino ad altri smart contract.}
 
 \TermineGlossario{Solidity}
 \DefinizioneGlossario{È un linguaggio di programmazione orientato agli oggetti per la scrittura di smart contract. Viene utilizzato per implementare smart contract su varie piattaforme di blockchain, in particolare Ethereum.}
@@ -30,19 +30,19 @@
 \DefinizioneGlossario{È un framework open source per lo sviluppo di applicazioni su piattaforma Java. Ad esso sono associati altri progetti, che hanno nomi composti come Spring Boot, Spring Data, 
 Spring Batch. Questi progetti sono stati ideati per fornire funzionalità aggiuntive al framework.}
 
-\TermineGlossario{Stakeholder}
+\TermineGlossario{stakeholder}
 \DefinizioneGlossario{Sono le persone influenti per il prodotto: dicono se una certa opportunità è buona. Possono essere chi usa il prodotto, chi compra il prodotto, chi sostiene i costi di realizzazione, chi verifica le esecuzioni dei processi.}
 
 \TermineGlossario{StarUML}
 \DefinizioneGlossario{Strumento per la generazione automatica di codice Java a partire dalla sua rappresentazione UML; è possibile, inoltre, effettuare l'operazione inversa (reverse engineer) del codice Java sorgente per produrre il diagramma UML corrispondente.}
 
-\TermineGlossario{Stadio} 
+\TermineGlossario{stadio} 
 \DefinizioneGlossario{Si intende la sotto-fase relativa alla pianificazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}. Da considerarsi come delle \glo{milestone} minori, con relativi obiettivi che il gruppo intende raggiungere entro la fine delle stesse.}
 
-\TermineGlossario{Stream}
+\TermineGlossario{stream}
 \DefinizioneGlossario{È un "canale" tra la sorgente e la destinazione attraverso il quale fluiscono i dati.}
 
-\TermineGlossario{Studio di fattibilità}
+\TermineGlossario{studio di fattibilità}
 \DefinizioneGlossario{Documento redatto per analizzare i capitolati d'appalto presentati dai vari proponenti.
 In esso vengono descritte le ragioni che portano alla scelta o al rifiuto di intraprendere la fornitura del prodotto richiesto da un capitolato.}
 
