--- a/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
@@ -9,7 +9,7 @@
 \TermineGlossario{Toolkit}
 \DefinizioneGlossario{È un insieme di strumenti software di base, in genere librerie, usati per facilitare e uniformare lo sviluppo di applicazioni derivate più complesse.}
 
-\TermineGlossario{Tracciamento} 
+\TermineGlossario{tracciamento} 
 \DefinizioneGlossario{L'atto nella quale è avvenuta con successo il collegamento RFID tra il dispositivo mobile munito dell'applicazione del dipendente e il dispositivo reader dell' azienda. Questa funzione permette di tracciare gli utenti all'interno dell'area dell'azienda in modo più preciso }
 
 \TermineGlossario{TypeScript} 
