--- a/DocumentiEsterni/Glossario/src/Alfabeto/U.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/U.tex
@@ -8,7 +8,7 @@
 \TermineGlossario{Unified Modeling Language (UML)}
 \DefinizioneGlossario{In ingegneria del software è un linguaggio di modellazione e di specifica basato sul paradigma orientato agli oggetti. Viene usato per descrivere soluzioni analitiche e progettuali in modo sintetico e comprensibile ad un vasto pubblico (standard industriale unificato).}
 
-\TermineGlossario{Uscita}
+\TermineGlossario{uscita}
 \DefinizioneGlossario{Per uscita da un luogo di un'azienda si intende l'attività di spostamento fisico in cui un'utente passa da una posizione geografica interna ad un perimetro che delimita un luogo soggetto a tracciamento ad una non soggetta a tracciamento.}
 
 \TermineGlossario{User Interface (UI)}
