--- a/DocumentiEsterni/Glossario/src/Alfabeto/W.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/W.tex
@@ -1,8 +1,10 @@
 \section{W}
-\TermineGlossario{Way of working}
+\TermineGlossario{way of working}
 \DefinizioneGlossario{È il modo in cui il gruppo rende sistematiche, disciplinate e quantificabili le attività di progetto.}
 
-\TermineGlossario{Walkthrough}
+\TermineGlossario{walkthrough}
 \DefinizioneGlossario{Tecnica di verifica "a pettine", ovvero verifica ogni oggetto in esame. È molto "costosa" ma è consigliata se non si ha già eseguito alcuna attività di verifica in precedenza o non si sa bene cosa verificare.}
+\TermineGlossario{WORA}
+\DefinizioneGlossario{sigla(slogan) che indica che con una singola base di codice si sviluppano applicazioni per più sistemi operativi. }
 
 \clearpage
