--- a/DocumentiEsterni/Glossario/src/Riferimenti.tex
+++ b/DocumentiEsterni/Glossario/src/Riferimenti.tex
@@ -1,11 +1,21 @@
-\section{Riferimenti}
+\section{Riferimenti normativi}
 
 \begin{itemize}
 \item \textbf{Enciclopedia Treccani}: \url{http://www.treccani.it/enciclopedia/};
 \item \textbf{Wikipedia (en)}: \url{https://en.wikipedia.org/};
-\item \textbf{AWS Amazon}: \url{https://aws.amazon.com/it/};
 \item \textbf{Guide to the Software Engineering Body of Knowledge};
 \item \textbf{Software Engineering (10th edition) - Ian Sommerville}.
 \end{itemize}
+
+\section{Riferimenti informativi}
+
+\begin{itemize}
+\item \textbf{AWS Amazon}: \url{https://aws.amazon.com/it/};
+\item \textbf{AWS gamelift}: \url{https://aws.amazon.com/it/gamelift/};
+\item \textbf{AWS cloudwatch}: \url{https://aws.amazon.com/it/cloudwatch/};
+\item \textbf{AWS dynamodb}: \url{https://aws.amazon.com/it/dynamodb/};
+
+\end{itemize}
+
 
 \clearpage
