--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -75,6 +75,6 @@ L’esempio sotto riportato riporta una tabella costruita secondo le disposizion
 %\end{itemize}
 Ogni immagine, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
-\subsubsection{Diagrammi \glo{UML}}
-Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà Draw.IO.
+%\subsubsection{Diagrammi \glo{UML}}
+%Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà Draw.IO.
 
