--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
@@ -13,12 +13,10 @@ L'infrastruttura deve essere definita e documentata per coniugarsi con i requisi
 
 \subsubsection{Istituzione dell'infrastruttura}
 
-\myparagraph{Configurazione dell'infrastruttura}
+\myparagraph{Configurazione dell'infrastruttura}\leavevmode \\
 Essa deve essere pianificata e documentata. I criteri per la scelta della configurazione devono includere le funzionalità a disposizione, le performance, la sicurezza, la disponibilità (in particolare di spazio e di risorse), l'equipaggiamento correlato, i costi. Vanno inoltre considerati i requisiti legati alle tempistiche (correlati alle performance).
-
 In particolare l'infrastruttura indicata per il progetto corrente non riguarda prodotti hardware ma si limita ai software associati alle attività in seguito riportate:
-
-\myparagraph{Comunicazione e meeting}
+\myparagraph{Comunicazione e meeting}\leavevmode \\
 
 Di seguito  vengono illustrati gli strumenti software per lo svolgimento di riunioni telematiche e le comunicazioni rapide. Nello specifico, le comunicazioni vengono divise in due macrocategorie, ovvero le comunicazioni interne al gruppo e le comunicazioni con enti e persone esterne ad esso.
 
@@ -43,8 +41,7 @@ I canali di comunicazione con il proponente sono:
     \item Telegram: per comunicazioni rapide e/o urgenti;
     \item email: per comunicazioni ufficiali e che richiedono un certo livello di sicurezza.
 \end{itemize}
-\myparagraph{Controllo delle versioni, issue tracking system e memorizzazione remota condivisa}
-
+\myparagraph{Controllo delle versioni, issue tracking system e memorizzazione remota condivisa}\leavevmode \\
 Per il controllo delle versioni del prodotto sviluppato e la possibilità di memorizzare documenti in una repository remota verrà utilizzato GitLab (si rimanda all'apposita sezione "Classificazione dei documenti" [sez 3.3] nei processi di supporto).
 
 \subsubsection{Manutenzione dell'infrastruttura}
