--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
@@ -12,7 +12,7 @@ Il team deve stabilire una suite di processi organizzativi per tutto il ciclo di
 
 \subsubsection{Controllo del processo}
 
-\myparagraph{Valutazione del processo} Essa deve essere stabilita, sviluppata, documentata e applicata. I risultati delle valutazioni devono essere memorizzati.
+\myparagraph{Valutazione del processo}\leavevmode \\ Essa deve essere stabilita, sviluppata, documentata e applicata. I risultati delle valutazioni devono essere memorizzati.
 
 In particolare, nel progetto corrente verrà assegnato un grado di rischio a ciascuna epic basato su tre criteri presentati secondo il seguente schema (critico, medio, favorevole):
 
@@ -22,7 +22,7 @@ In particolare, nel progetto corrente verrà assegnato un grado di rischio a cia
     \item complessità stabilita dal team nelle videoriunioni (alta, media, bassa).
 \end{itemize}
 
-Il grado di rischio delle Epic prevede 5 livelli:
+Il grado di rischio degli \glo{epic} prevede 5 livelli:
 \begin{enumerate}
     \item[\textbf{5.}] Highest: tutti e tre i valori sono critici;
     \item[\textbf{4.}] High: al massimo due dei tre criteri presentano valori critici;
@@ -31,12 +31,12 @@ Il grado di rischio delle Epic prevede 5 livelli:
     \item[\textbf{1.}] Lowest: non sono presenti valori critici e almeno uno dei tre parametri di valutazione del rischio presenta il valore favorevole.
 \end{enumerate}
 
-Le attività di progetto vengono pianificate dal \responsabile{} insieme al team nelle riunioni, in modo tale da avere e mantenere un valore di rischio minore o uguale a medio per ogni task. La codifica di rischio nelle epic va aggiornata in accordo con i criteri precedentemente presentati. Qualora venisse raggiunto un grado di rischio superiore al medio si prospetta un'analisi più accurata della situazione con annessi eventuali modifiche al piano relativo a tale task.
+Le attività di progetto vengono pianificate dal \responsabile{} insieme al team nelle riunioni, in modo tale da avere e mantenere un valore di rischio minore o uguale a medio per ogni task. La codifica di rischio nelle \glo{epic} va aggiornata in accordo con i criteri precedentemente presentati. Qualora venisse raggiunto un grado di rischio superiore al medio si prospetta un'analisi più accurata della situazione con annessi eventuali modifiche al piano relativo a tale task.
 
-\myparagraph{Controllo}Il \responsabile{} del team deve pianificare ed eseguire revisioni periodiche dei processi per assicurarsi che l'adeguatezza ed efficacia dei processi in questione rimanga tale nell'ottica degli obiettivi fissati.
+\myparagraph{Controllo}\leavevmode \\ Il \responsabile{} del team deve pianificare ed eseguire revisioni periodiche dei processi per assicurarsi che l'adeguatezza ed efficacia dei processi in questione rimanga tale nell'ottica degli obiettivi fissati.
 
 \subsubsection{Miglioramento del processo}
 
-\myparagraph{Analisi}Il team di sviluppo deve apportare dei miglioramenti ai propri processi qualora si rivelasse necessario secondo i risultati della valutazione del processo. La documentazione relativa al processo deve essere aggiornata in maniera tale da poter evidenziare eventuali miglioramenti nei processi organizzativi.
+\myparagraph{Analisi}\leavevmode \\Il team di sviluppo deve apportare dei miglioramenti ai propri processi qualora si rivelasse necessario secondo i risultati della valutazione del processo. La documentazione relativa al processo deve essere aggiornata in maniera tale da poter evidenziare eventuali miglioramenti nei processi organizzativi.
 
-\myparagraph{Valutazione e miglioramento}I dati memorizzati (valutazioni, dati archiviati e dati tecnici) devono essere conservati e analizzati per poter comprendere eventuali debolezze e punti di forza dei processi svolti. Le analisi verranno utilizzate come feedback per migliorare tali processi ed eventualmente per indicare dei cambiamenti utili all'interno del modo di operare all'interno del medesimo progetto o in progetti successivi.
+\myparagraph{Valutazione e miglioramento}\leavevmode \\I dati memorizzati (valutazioni, dati archiviati e dati tecnici) devono essere conservati e analizzati per poter comprendere eventuali debolezze e punti di forza dei processi svolti. Le analisi verranno utilizzate come feedback per migliorare tali processi ed eventualmente per indicare dei cambiamenti utili all'interno del modo di operare all'interno del medesimo progetto o in progetti successivi.
