--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex
@@ -1,17 +1,17 @@
-\myparagraph{Inizializzazione}
+\myparagraph{Inizializzazione}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Inizializzazione.tex}
 
-\myparagraph{Preparazione della risposta}
+\myparagraph{Preparazione della risposta}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/PreparazioneDellaRisposta.tex}
 
-\myparagraph{Pianificazione}\label{sec:Pianificazione}
+\myparagraph{Pianificazione}\label{sec:Pianificazione}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Pianificazione.tex}
 
-\myparagraph{Esecuzione e controllo}
+\myparagraph{Esecuzione e controllo}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/EsecuzioneControllo.tex}
 
-\myparagraph{Revisione e valutazione}
+\myparagraph{Revisione e valutazione}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/RevisioneValutazione.tex}
 
-\myparagraph{Rilascio e completamento}
+\myparagraph{Rilascio e completamento}\leavevmode \\
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/RilascioCompletamento.tex}
