--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Strumenti/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Strumenti/main.tex
@@ -4,16 +4,20 @@
     \caption{Tabella stack tecnologico}                                                                                 \\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Contesto di Utilizzo}} & \textcolor{\secondaryColor}{\textbf{Motivazione}} & \textcolor{\secondaryColor}{\textbf{Sito Ufficiale}}\\ \endhead
-    {Android Studio} & {\glo{IDE} per facilitare lo sviluppo del app mobile}   & {la maggior parte dei componenti ha un dispositivo con OS Android e la relativa libreria è molto ben documentata} & {\url{https://developer.android.com/guide}}\\
+    {Android Studio} & {\glo{IDE} per facilitare lo sviluppo del app mobile}   & {la maggior parte dei componenti ha un dispositivo con OS Android e la relativa \glo{libreria} è ben documentata} & {\url{https://developer.android.com/guide}}\\
     {Flatter} & {Per lo sviluppo delle apps mobile(utente)} & {Consente di sviluppare sia per Android che IOS seguendo il principio \glo{WORA} } & {\url{https://flutter.dev/}}\\
     {Typescript} & {Per lo sviluppo relativo all'applicazione Web(Admin)} & { Facilità la scrittura di codice JavaScript } & {\url{https://www.typescriptlang.org/}}\\
-    {MongoDB} & {Per il database} & { rende l'integrazione di dati di applicazioni(con mole di dati alta) più facile e veloce} & {\url{https://www.mongodb.com/}}\\
-    {RabbitMQ} & {Per garantire la continuità del servizio} & {Per rendere l'applicazione quasi sempre disponibile e con grande affidabilità} & {\url{https://www.rabbitmq.com/}}\\
+    {MongoDB} & {Per il database} & { rende l'integrazione di dati di applicazioni (con mole di dati alta) più facile e veloce} & {\url{https://www.mongodb.com/}}\\
+    {RabbitMQ} & {Per garantire la continuità del servizio} & {per rendere l'applicazione quasi sempre disponibile e con grande affidabilità} & {\url{https://www.rabbitmq.com/}}\\
     {Kong} & {Per la comunicazione via API tra componenti} & {facilità lo sviluppo di API e microservizi} & {\url{https://konghq.com/}}\\
+    {Docker} & {automatizzare il deployment di parte del software scritto} & {E’ stato consigliato sia dal proponente che da un membro del team con esperienza} & {\url{https://kubernetes.io/it/docs/}}\\
+    {Kubernets} & {Per la gestione di \glo{container}} & {E’ stato consigliato sia dal proponente che da un membro del team con esperienza} & {\url{https://kubernetes.io/it/docs/}}\\
     {Angular} & {Grafica applicazione web} & {framework che facilità lo sviluppo di UI scritte in Javascript} & {\url{https://angular.io/}}\\
     {Auth0} & {Logica di Login} & {facilità l'implementazione di logiche relative al accesso autorizzato} & {\url{https://auth0.com/}}\\
     {Traffol framework} & {testing comunicazione blockchain} & {facilità lo sviluppo è il testing di applicazioni dove è richiesto l'utilizzo di blockchain basate su Ethereum} & {\url{https://www.trufflesuite.com/}}\\
-    {Solidity} & {comunicazione blockchain per salvare l'hash} & {consente di creare contratti facili da sviluppare e sicuri(curva di apprendimento esponenziale)} & {\url{https://docs.soliditylang.org/en/v0.7.4/}}\\
-    {NestJS} & {Beckend logica applicazione} & {Facilità l'implementazione di codice JavaScript lato backend} & {\url{https://nestjs.com/}}\\
-    {NodeJS} & {Per lo sviluppo della parte beckend e frontend} & {facilità la scrittura di codice Javascript includendo diversi moduli} & {\url{https://nodejs.org/}}\\
+    {Solidity} & {comunicazione con la blockchain per salvare l'hash che certifica il dato} & {consente di creare contratti facili da sviluppare e sicuri(curva di apprendimento esponenziale)} & {\url{https://docs.soliditylang.org/en/v0.7.4/}}\\
+    {NestJS} & {backend logica applicazione} & {facilità l'implementazione di codice JavaScript lato backend} & {\url{https://nestjs.com/}}\\
+    {NodeJS} & {Per lo sviluppo della parte backend e frontend} & {facilità la scrittura di codice Javascript includendo diversi moduli} & {\url{https://nodejs.org/}}\\
 \end{longtable}
+
+ 
