--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/main.tex
@@ -3,6 +3,6 @@
 
 \myparagraph{Progettazione}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex}
-
+\newpage
 \myparagraph{Codifica}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/main.tex}
