--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/main.tex
@@ -1,5 +1,5 @@
-\mysubparagraph{Scopo}
+\mysubparagraph{Scopo}\leavevmode \\
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/src/scopo.tex}
 
-\mysubparagraph{Stili di codifica}
+\mysubparagraph{Stili di codifica}\leavevmode \\
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/src/stiliDiCodifica.tex}
