--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex
@@ -1,8 +1,8 @@
-\mysubparagraph{Scopo}
+\mysubparagraph{Scopo}\leavevmode \\
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/scopo.tex}
 
-\mysubparagraph{Technology baseline}
+\mysubparagraph{Technology baseline}\leavevmode \\
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex}
 
-\mysubparagraph{Product baseline}
+\mysubparagraph{Product baseline}\leavevmode \\
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/ProductBaseline.tex}
