--- a/DocumentiInterni/NormeDiProgetto/src/StandardQualita/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/StandardQualita/main.tex
@@ -22,7 +22,7 @@
 		\subsubsection{Modello della qualità del software}
 		Il modello di qualità del software suddivide la qualità in sei caratteristiche generali e varie sotto caratteristiche, misurabili attraverso delle metriche, utilizzate per fornire una scala ed un metodo per la misurazione. Di seguito sono riportate queste caratteristiche.
 
-		\paragraph{Funzionalità}
+		\paragraph{Funzionalità}\leavevmode \\
 		Capacità del software di soddisfare i requisiti, descritti nell'Analisi dei Requisiti, in un determinato contesto.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
@@ -32,7 +32,7 @@
 			\item \textbf{Conformità}: capacità di aderire a standard;
 			\item \textbf{Sicurezza}: capacità di proteggere informazioni e dati.
 		\end{itemize}
-		\paragraph{Affidabilità}
+		\paragraph{Affidabilità}\leavevmode \\
 		Capacità del software di mantenere uno specifico livello di prestazioni quando usato in condizioni specificate.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
@@ -41,14 +41,14 @@
 			\item \textbf{Recuperabilità}: capacità di ripristinare un livello appropriato di prestazioni o di recupero di informazioni rilevanti a seguito di un malfunzionamento;
 			\item \textbf{Aderenza}:  capacità di aderire a standard, regole e convenzioni che riguardano l'affidabilità.
 		\end{itemize}
-		\paragraph{Efficienza}
+		\paragraph{Efficienza}\leavevmode \\
 		Capacità del prodotto software di eseguire le proprie funzioni minimizzando il tempo necessario e sfruttando al meglio le risorse che necessita.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
 			\item \textbf{Nel tempo}: capacità di fornire adeguati tempi di risposta, elaborazione e velocità di attraversamento in determinate condizioni;
 			\item \textbf{Nello spazio}: capacità di utilizzo di quantità e tipo di risorse in maniera adeguata;
 		\end{itemize}
-		\paragraph{Usabilità}
+		\paragraph{Usabilità}\leavevmode \\
 		Capacità del prodotto software di essere compreso, appreso, usato e accettato dall'utente, quando usato sotto determinate condizioni.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
@@ -57,7 +57,7 @@
 			\item \textbf{Operabilità}: capacità di permettere all'utente di eseguire i suoi scopi e controllarne l'uso;
 			\item \textbf{Attrattività}: capacità di essere piacevole all'utente che l'utilizza.
 		\end{itemize}
-		\paragraph{Manutenibilità}
+		\paragraph{Manutenibilità}\leavevmode \\
 		Capacità del software di essere modificato, al fine di aggiungere correzioni, miglioramenti o adattamenti.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
@@ -66,7 +66,7 @@
 			\item \textbf{Stabilità}: capacità di evitare effetti indesiderati a seguito di una modifica;
 			\item \textbf{Testabilità}: capacità di essere facilmente testato per validare le modifiche apportate.
 		\end{itemize}
-		\paragraph{Portabilità}
+		\paragraph{Portabilità}\leavevmode \\
 		Capacità del software di essere trasportato da un ambiente di lavoro ad un altro, sia esso hardware che software.\\
 		Nello specifico il software deve soddisfare le seguenti caratteristiche:
 		\begin{itemize}
