--- a/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
@@ -2,26 +2,26 @@
 \TermineGlossario{D3.js}
 \DefinizioneGlossario{Libreria JavaScript per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati, visibili attraverso un comune browser. Per fare ciò si serve largamente degli standard web: SVG, HTML5, e CSS. }
 
-\TermineGlossario{Dashboard}
+\TermineGlossario{dashboard}
 \DefinizioneGlossario{È un tipo di interfaccia utente grafica che mostra informazioni generiche ed è caratterizzata dalla facilità di lettura ed immediatezza, consentendo al management di agire tempestivamente prendendo decisioni corrette.}
 
-\TermineGlossario{Dati dell'organizzazione}
+\TermineGlossario{dati dell'organizzazione}
 \DefinizioneGlossario{È un sottoinsieme dei parametri dell'organizzazione, nel quale vengono esclusi il perimetro di tracciamento dell'organizzazione e l'insieme di luoghi di tracciamento.}
 
 
-\TermineGlossario{Deliverable}
+\TermineGlossario{deliverable}
 \DefinizioneGlossario{Indica uno o un insieme di risultati significativi che deve essere conseguito durante il progetto e fornito al committente, quindi soggetto a controllo. Può essere un oggetto materiale oppure un documento.}
 
-\TermineGlossario{Design}
+\TermineGlossario{design}
 \DefinizioneGlossario{In italiano progettazione è un piano o una specifica per la costruzione di un oggetto o sistema o per l'implementazione di un'attività o di un processo, o (in alcuni casi ex.artigiano)il risultato di quel piano o specifica sotto forma di prototipo, prodotto o processo}
 
-\TermineGlossario{Disciplinato}
+\TermineGlossario{disciplinato}
 \DefinizioneGlossario{Comportamento conforme a regole e strategie ben definite.}
 
 \TermineGlossario{Discord}
 \DefinizioneGlossario{È una piattaforma gratuita di chat vocale e testuale che fornisce server gratis per gli utenti e infrastrutture per server dedicati.}
 
-\TermineGlossario{Dispatcher}
+\TermineGlossario{dispatcher}
 \DefinizioneGlossario{È un modulo del sistema operativo che ha la responsabilità di: estrazione dei messaggi in arrivo dai canali sottostanti, della loro conversione in chiamate al metodo nel codice dell'applicazione e della restituzione dei risultati al chiamante.}
 
 \TermineGlossario{Docker}
@@ -30,7 +30,7 @@
 \TermineGlossario{DynamoDB}
 \DefinizioneGlossario{è uno dei servizi di AWS completamente gestito ovvero, è un database non relazionale che supporta i modelli di dati,di tipo documento e di tipo chiave-valore che offre prestazioni di pochi millisecondi a qualsiasi scala}
 
-\TermineGlossario{Draw.oi}
+\TermineGlossario{Draw.io}
 \DefinizioneGlossario{Piattaforma che permette di creare diagrammi direttamente dal proprio browser Web, senza dover utilizzare software o app.}
 
 \clearpage
