--- a/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
@@ -2,32 +2,32 @@
 \TermineGlossario{Infrastructure as a service (IaaS)} 
 \DefinizioneGlossario{È un'infrastruttura informatica istantanea, fornita e gestita su Internet. Essa è un servizio cloud.}
 
-\TermineGlossario{Indirizzo IP}
+\TermineGlossario{indirizzo IP}
 \DefinizioneGlossario{È un'etichetta numerica che identifica univocamente una macchina collegata ad una rete informatica che utilizza l'Internet Protocol come protocollo di rete per l'instradamento.}
 
 \TermineGlossario{Integrated Development Environment (IDE)}
 \DefinizioneGlossario{È un ambiente di sviluppo integrato, cioè è un software che, in fase di programmazione, supporta i programmatori nello sviluppo del codice sorgente di un programma. In fase di scrittura del codice segnala eventuali errori commessi dallo sviluppatore.}
 
-\TermineGlossario{Incontro formale}
+\TermineGlossario{incontro formale}
 \DefinizioneGlossario{Riunione fra i membri del gruppo in cui si discutono temi riguardanti il progetto e si prendono delle decisioni.
 In questi incontri, normalmente fisici, viene redatto un verbale con un segretario che si occupa della sua stesura e successiva pubblicazione nel repository della documentazione.}
 
-\TermineGlossario{Incrementale (modello)}
+\TermineGlossario{incrementale (modello)}
 \DefinizioneGlossario{Si intende, nell'ambito dell'ingegneria del software, un modello adattivo di sviluppo di un progetto software, basato sulla successione di specifici passi principali. Prevede rilasci multipli, realizzando un incremento di funzionalità e avvicinandosi sempre più alle attese.}
 
-\TermineGlossario{Ingresso}
+\TermineGlossario{ingresso}
 \DefinizioneGlossario{Per ingresso presso un luogo di un'organizzazione si intende l'attività di spostamento fisico in cui un'utente passa da una posizione geografica non soggetta a tracciamento ad una interna ad un perimetro che delimita un luogo soggetto a tracciamento.}
 
-\TermineGlossario{Interfaccia grafica (GUI, Graphical User Interface)}
+\TermineGlossario{interfaccia grafica (GUI, Graphical User Interface)}
 \DefinizioneGlossario{È un tipo di interfaccia utente che consente l'interazione uomo-macchina in modo visuale utilizzando rappresentazioni grafiche piuttosto che riga di comando.}
 
-\TermineGlossario{Interfaccia web}
+\TermineGlossario{interfaccia web}
 \DefinizioneGlossario{È un'interfaccia che permette la visualizzazione di siti internet adeguando il computer alle necessità di interazione dell'utente, codificando e decodificando il linguaggio di programmazione e di demarcazione utilizzato nel web.}
 
-\TermineGlossario{Internet of Things (IoT, internet delle cose)}
+\TermineGlossario{Internet of Things (IoT)}
 \DefinizioneGlossario{È un neologismo riferito all'estensione di Internet al mondo degli oggetti e dei luoghi concreti. Il concetto rappresenta una possibile evoluzione dell'uso della rete internet: gli oggetti si rendono riconoscibili e acquisiscono intelligenza grazie al fatto di poter comunicare dati su se stessi e accedere ad informazioni aggregate da parte di altri.}
 
-\TermineGlossario{Inspection}
+\TermineGlossario{inspection}
 \DefinizioneGlossario{Tecnica di verifica specifica per un certo contesto. È meno "costosa" del walkthrough e si basa idealmente su una checklist di elementi da verificare nell'oggetto in esame.}
 
 \TermineGlossario{IOS}
