--- a/DocumentiEsterni/Glossario/src/Alfabeto/V.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/V.tex
@@ -1,17 +1,17 @@
 \section{V}
-\TermineGlossario{Validazione}
+\TermineGlossario{validazione}
 \DefinizioneGlossario{Accertamento che il prodotto realizzato sia esattamente conforme alle attese.}
 
-\TermineGlossario{Verifica}
+\TermineGlossario{verifica}
 \DefinizioneGlossario{Accertamento che l'esecuzione delle attività di processi svolti nella fase in esame non causino errori.}
 
-\TermineGlossario{Verificatore}
+\TermineGlossario{verificatore}
 \DefinizioneGlossario{Ha l'incarico, per l'intero ciclo di vita del progetto, di svolgere le attività di verifica e validazione. Si occupa, inoltre, di redigere il documento relativo al Piano di Qualifica che conterrà gli esiti delle verifiche delle prove effettuate.}
 
-\TermineGlossario{Vincolo}
+\TermineGlossario{vincolo}
 \DefinizioneGlossario{In relazione a un requisito esprime un obbligo che il prodotto deve rispettare.}
 
-\TermineGlossario{Vulnerabilità}
+\TermineGlossario{vulnerabilità}
 \DefinizioneGlossario{È una componente (esplicita o implicita) di un sistema, in corrispondenza alla quale le misure di sicurezza sono assenti, ridotte o compromesse, il che rappresenta un punto 
 debole del sistema e consente a un eventuale aggressore di compromettere il livello di sicurezza dell'intero sistema.}
 \clearpage
