--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Strumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Strumenti.tex
@@ -7,11 +7,12 @@
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Sito Ufficiale}}\\ \endhead
     {Latex} & {Per la creazione della documentazione del progetto,compilatore LatexMK.} & {\url{https://www.latex-project.org/}}\\
-    {Visual Studio Code} & {i componenti del gruppo useranno questo IDE sia per la documentazione(Latex) che per il processo sviluppo tramite appositi plugin delle tecnologie interessate.} & {\url{https://code.visualstudio.com/}}\\
+    {Visual Studio Code} & {i componenti del gruppo useranno questo IDE sia per la documentazione (Latex) che per il processo sviluppo tramite appositi plugin delle tecnologie interessate.} & {\url{https://code.visualstudio.com/}}\\
     {Overleaf} & {Per modifiche veloci e tempestive, il gruppo potrà, inoltre, usare l'editor online Overleaf.} & {\url{https://www.overleaf.com/learn}}\\
     {GitLab} & {Permette la gestione di repository Git e di funzioni trouble ticket } & {\url{https://about.gitlab.com/}}\\
     {Git}  & {Permette la gestione repo tramite \glo{CLI} } & {\url{https://git-scm.com/}}\\
     {GitKraken}  & {Applicazione Desktop per gestione di repo Git tramite \glo{UI}} & {\url{https://www.gitkraken.com/}}\\
     {Jira} & { consente il bug tracking e la gestione dei progetti \glo{agile} tramite sistema di ticket} & {\url{https://www.atlassian.com/it/software/jira}}\\
+    {Draw.io} & { creazione dei diagrammi UML(salvati in png)} & {\url{https://app.diagrams.net/}}\\
 \end{longtable} 
 
