--- a/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
@@ -13,6 +13,7 @@
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
+    1.0.1                  & 2021-03-3                                        & modifica §1,2,3,4          & Elvis Murtezan      & \amministratore{} \\
     1.0.0                  & 2021-01-5                                        & Approvazione               & Elvis Murtezan      & \responsabile{} \\
 
     0.1.0                  & 2020-12-22                                       & Verifica             & Giovanni Grigoletto, Andrea De Tomasi, Abdelwahad Kandoul  & \verificatore{} \\
